# Matrices

./: .gitignore
Matrices/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
Matrices/AlgorithmMultiplication/: IAlgorithmMultiplication.hpp  StrassenAlgorithm.cpp  StrassenAlgorithm.hpp
Matrices/Exception/: matrixDimensionException.cpp  matrixDimensionException.hpp
Matrices/Tests/: test1  test2
build-Matrices-Desktop-Domyślna/: CMakeCache.txt  Makefile  Matrices  Matrices.cbp  cmake_install.cmake
build-Matrices-Desktop-Domyślna/AlgorithmMultiplication/: AlgorithmMultiplication.cbp  Makefile  cmake_install.cmake
