project(Matrices)
cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
include_directories(AlgorithmMultiplication)
include_directories(Exception)
aux_source_directory(. SRC_LIST)
aux_source_directory(./AlgorithmMultiplication SRC_LIST)
aux_source_directory(./Exception SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
